--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         
             //Attach a camera to the scene and the canvas
             scene.activeCamera = touchCamera;
-            freeCamera.attachControl(canvas, true);
+            touchCamera.attachControl(canvas, true);
         
             return scene;
         }
