--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <canvas id="renderCanvas"></canvas>
     <script>
         var canvas = document.getElementById("renderCanvas");
-
+ var box3 ;
         var createScene = function () {
             var scene = new BABYLON.Scene(engine);
         
@@ -49,7 +49,7 @@
             var box1 = BABYLON.Mesh.CreateBox("b1", 1.0, scene);
             var box2 = BABYLON.Mesh.CreateBox("b2", 1.0, scene);
             box2.position.x = -3;
-            var box3 = BABYLON.Mesh.CreateBox("b3", 1.0, scene);
+            box3 = BABYLON.Mesh.CreateBox("b3", 1.4, scene);
             box3.position.x = 3;
         
             // ArcRotateCamera >> Camera rotating around a 3D point (here Vector zero)
@@ -81,6 +81,8 @@
         engine.runRenderLoop(function () {
             if (scene) {
                 scene.render();
+
+                box3.rotation.y+=Math.PI/180*0.1; 
             }
         });
 
